# emv

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/emv-ca-keys/: Cargo.toml
crates/emv-ca-keys/src/: lib.rs
crates/emv-card/: Cargo.toml
crates/emv-card/src/: apdu.rs  crypto.rs  lib.rs  protocol.rs  reader.rs
crates/emv-card/tests/: hardware_integration.rs
crates/emv-cli/: Cargo.toml
crates/emv-cli/src/: formatters.rs  main.rs
crates/emv-cli/src/commands/: authenticate.rs  card_info.rs  dump.rs  dump_all_tags.rs  generate_ac.rs  get_challenge.rs  info.rs  info_formatter.rs  mod.rs
crates/emv-cli/src/tui/: app.rs  card_worker.rs  events.rs  mod.rs  ui.rs
crates/emv-cli/src/tui/screens/: authenticate.rs  info.rs  mod.rs
crates/emv-common/: Cargo.toml
crates/emv-common/src/: lib.rs
