[package]
name = "emv-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emv-signer"
path = "src/main.rs"

[dependencies]
emv-common = { path = "../emv-common" }
emv-ca-keys = { path = "../emv-ca-keys" }
emv-card = { path = "../emv-card" }
clap = { workspace = true }
crossterm = "0.28"
hex = { workspace = true }
pcsc = { workspace = true }
rand = "0.8"
ratatui = "0.29"
rsa = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
